tools/junius/tests/snapshots/cli__migrate_help.snap
---
source: tools/junius/tests/cli.rs
expression: stdout
---
Apply database migrations and emit per-plugin Postgres role grants

Usage: junius migrate [OPTIONS] <COMMAND>

Commands:
  up      Apply all pending migrations, then emit per-plugin Postgres role grants
  down    Roll back the most recently applied migration. Not supported in v1 (forward-fix discipline — write a new migration instead)
  status  Show applied and pending migrations

Options:
      --format <FORMAT>  Output format for command results [default: plain] [possible values: plain, json]
  -v, --verbose...       Increase verbosity (repeat for more)
      --cwd <CWD>        Run as if junius were started in <CWD>
  -h, --help             Print help
